--- a/style.css
+++ b/style.css
@@ -12,88 +12,82 @@
     --font: #fff;
 }
 
-h1 {
-    font-size: 3em;
-}
-
 .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     width: 100%;
     height: 100vh;
     background-color: var(--darkbg);
     color: var(--font);
 }
 
+.container h1 {
+    font-size: 5vw;
+}
+
 .converter {
     display: flex;
-    border-radius: 20px;
-    background: var(--lightbg);
-}
-
-.from,.to {
-    display: inline-flex;
-    justify-content: center;
     align-items: center;
+    width: 70vw;
+    height: 40vh;
+    margin-top: 3%;
+    padding: 1% 0px;
+    background-color: var(--lightbg);
+    border-radius: 20px;
+}
+
+.from,
+.to {
+    display: inline-flex;
     flex-direction: column;
-    aspect-ratio: 1/1;
-    font-size: 4em;
-    padding: 20px;
-}
-
-input {
-    width: clamp(150px, 20vw, 450px);
-    max-height: 4em;
-    font-size: 0.4em;
-    outline: none;
-    margin: 20px 0px;
-    border: 0px;
-    border-radius: 10px;
-}
-
-.list {
-    padding: 20px;
-    font-size: 0.3em;
-    border: 0px;
-    border-radius: 10px;
-    background: var(--btn);
-    color: var(--font);
+    align-items: center;
+    justify-content: space-evenly;
+    width: 48%;
+    height: 100%;
 }
 
 label {
-    user-select: none;
+    font-size: 4vw;
 }
 
-i {
-    font-size: 2em;
-    align-self: center;
-    color: var(--darkbg);
+input {
+    width: 80%;
+    height: 20%;
+    border-radius: 15px;
+}
+
+.list {
+    width: 70%;
+    height: 20%;
+    color: var(--font);
+    background-color: var(--btn);
+    border-radius: 15px;
 }
 
 @media (max-width:480px) {
     .converter {
         flex-direction: column;
-        height: 80vh;
-        width: 90vw;
+        height: 70vh;
+        width: 75vw;
     }
 
-    label,h1,i {
-        font-size: 20px;
+    .from,
+    .to {
+        width: 80%;
     }
 
-    input,.list {
-        font-size: 15px;
-        padding: 0;
-        height: 3em;
+    label {
+        font-size: 10vw;
     }
 
-    i {
-        transform: rotate(90deg);
+    input {
+        border-radius: 10px;
     }
 
-    .to,.from {
-        padding: 0;
+    .list {
+        border-radius: 10px;
+        height: 30%;
     }
 }
