--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     padding: 1% 0px;
     background-color: var(--lightbg);
     border-radius: 20px;
+    box-shadow: 8px 7px 10px 0px rgb(16 16 16);
 }
 
 .from,
